@@ -30,8 +30,8 @@
         "REPLICATED_DATA": "Replicated Data",
         "AVAILABLE_DATA": "Available Data",
         "TOTAL_RECORDS": "Total Records",
-        "UNDERREPL_RECORDS": "Underrepl. Records",
-        "UNAVAIL_RECORDS": "Unavail. Records",
+        "UNDERREPL_RECORDS": "Under-Replicated Records",
+        "UNAVAIL_RECORDS": "Unavailable Records",
         "CLUSTER_LOAD": "Cluster Load",
         "CLUSTER_CHECKS": "Cluster Checks",
         "NODES_CHECKS": "Nodes Checks",
@@ -67,10 +67,10 @@
         "CONFIG_SHARDS": "Configured Shards",
         "STARTED_SHARDS": "Started Shards",
         "MISSING_SHARDS": "Missing Shards",
-        "UNDERREPL_SHARDS": "Underrepl. Shards",
+        "UNDERREPL_SHARDS": "Under-Replicated Shards",
         "TOTAL": "Total",
         "UNAVAILABLE": "Unavailable",
-        "UNDERREPL": "Underrepl.",
+        "UNDERREPL": "Under-Replicated",
         "SIZE": "Size",
         "RECOVERY": "Recovery",
         "BLOBS": "Blobs",
@@ -84,10 +84,10 @@
             "CONF_SHARDS": "Conf. Shards",
             "STARTED_SHARDS": "Started Shards",
             "MISSING_SHARDS": "Missing Shards",
-            "UNDERREPL_SHARDS": "Underr. Shards",
+            "UNDERREPL_SHARDS": "Under-Replicated Shards",
             "TOTAL_RECORDS": "Total Records",
-            "UNAVAIL_RECORDS": "Unavail. Records",
-            "UNDERREPL_RECORDS": "Underr. Records",
+            "UNAVAIL_RECORDS": "Unavailable Records",
+            "UNDERREPL_RECORDS": "Under-Replicated Records",
             "SIZE": "Size"
         },
         "SCHEMA": "Schema",
@@ -97,11 +97,12 @@
         "NOT_REACHABLE_MSG": "Cluster is not reachable",
         "NAME": "Name",
         "NODES": "Nodes",
+        "OVERVIEW": "Overview",
         "HEALTH": "Health",
         "HOSTNAME": "Hostname",
         "CRATE_VERSION": "CrateDB Version",
         "SNAPSHOT": "snapshot",
-        "REST_URL": "REST URL",
+        "HTTP_ENDPOINT": "HTTP endpoint",
         "CPU_USAGE": "CPU Usage",
         "HEAP_USAGE": "Heap Usage",
         "DISK_USAGE": "Disk Usage",
