@@ -30,8 +30,8 @@
         "REPLICATED_DATA": "Datos Replicados",
         "AVAILABLE_DATA": "Datos Disponibles",
         "TOTAL_RECORDS": "Registros Totales",
-        "UNDERREPL_RECORDS": "Registros no repl.",
-        "UNAVAIL_RECORDS": "Registros no disp.",
+        "UNDERREPL_RECORDS": "Registros no replicados",
+        "UNAVAIL_RECORDS": "Registros no disponibles",
         "CLUSTER_LOAD": "Carga del Clúster",
         "CLUSTER_CHECKS": "Chequeos del Clúster",
         "NODES_CHECKS": "Chequeos de Nodos",
@@ -87,7 +87,7 @@
             "UNDERREPL_SHARDS": "Shards no Repl.",
             "TOTAL_RECORDS": "Registros Totales",
             "UNAVAIL_RECORDS": "Registros Indisponibles",
-            "UNDERREPL_RECORDS": "Registros no Repl.",
+            "UNDERREPL_RECORDS": "Registros no repl.",
             "SIZE": "Tamaño"
         },
         "SCHEMA": "Esquema",
@@ -97,11 +97,12 @@
         "NOT_REACHABLE_MSG": "Clúster inalcanzable",
         "NAME": "Nombre",
         "NODES": "Nodos",
+        "OVERVIEW": "Vista general",
         "HEALTH": "Estado",
         "HOSTNAME": "Nombre de Servidor",
         "CRATE_VERSION": "Versión de CrateDB",
         "SNAPSHOT": "snapshot",
-        "REST_URL": "REST URL",
+        "HTTP_ENDPOINT": "HTTP término",
         "CPU_USAGE": "Uso de CPU",
         "HEAP_USAGE": "Uso de Heap",
         "DISK_USAGE": "Uso de Disco",
