@@ -5,6 +5,7 @@ Changes for Crate Admin Interface
 Unreleased
 ==========
 
+ - Removed abbreviations in the overview and table view. Updated nodes view.
 
 2018/03/20 1.9.0
 ================
